--- a/frontend/src/commons/Card.css
+++ b/frontend/src/commons/Card.css
@@ -2,14 +2,41 @@
   width: 180px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-items: space-between; */
   border-radius: 4px;
   box-shadow: 4px 4px 8px 2px rgba(233, 233, 233, 0.4);
   height: 330px;
   margin: 20px;
 }
 
+.card > a {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  align-content: center;
+  height: 100%;
+  text-decoration: none;
+  color: black;
+}
+
+.card-img {
+  width: 180px;
+  height: 270px;
+  object-fit: cover;
+  border-radius: 4px 4px 0 0;
+}
+
+.card-content {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.card-content > * {
+  margin : 0;
+}
 .image {
   margin: 0;
 }
-
