--- a/frontend/src/components/Row.css
+++ b/frontend/src/components/Row.css
@@ -1,8 +1,7 @@
 .flexRowJustified {
     display: flex;
-    /* flex-wrap: wrap; */
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 60%;
     overflow: scroll;
   }
