--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -14,6 +14,7 @@
   padding-left: 40px;
   display: flex;
   align-items: center;
+  flex: 1;
 }
 
 .logoDiv > a {
@@ -21,6 +22,8 @@
 }
 
 .topTitle {
+  display: block;
+  width: 220px;
   margin: 20px;
   text-decoration: overline;
   font-size: 2em;
@@ -58,6 +61,8 @@
   padding-right: 40px;
   display: flex;
   align-items: center;
+  justify-content: center;
+  right: 0;
 }
 
 .navButton {
@@ -73,10 +78,6 @@
   border-radius: 5px;
 }
 
-.navButton:hover {
-  animation-name: expand;
-  animation-duration: 0.5s;
-}
 
 @keyframes expand {
   0% {
@@ -88,4 +89,76 @@
   100% {
     font-size: 1.2em;
   }
+}
+
+.normal-navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+
+@media (max-width: 990px) {
+  .userButtons {
+    width: 100%;
+    margin: 20px 0px
+  }
+
+  .mediaNavDiv {
+    margin: 20px 0px;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+  }
+
+  .logoDiv {
+    justify-content: space-between;
+    /* align-content: flex-start; */
+  }
+
+  .topTitle {
+    display: none;
+  }
+
+  .normal-navigation {
+    display: none;
+  }
+}
+
+@media (min-width: 990px) {
+  .hamburger-menu,
+  .close-menu,
+  .mobile-navigation {
+    display: none;
+  }
+  .navButton:hover {
+    animation-name: expand;
+    animation-duration: 0.5s;
+  }
+}
+
+.mobile-navigation {
+  top: 100px;
+  background-color: #1e1eac;
+}
+
+.hamburger-menu {
+  margin: 20px;
+  right: 10px;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  margin-right: 40px;
+  /* align-self: flex-end; */
+}
+
+.close-menu {
+  margin: 25px;
+  right: 35px;
+  height: 36px;
+  width: 36px;
+  cursor: pointer;
+  margin-right: 45px;
+  /* align-self: flex-end; */
 }
