--- a/frontend/src/components/Row.css
+++ b/frontend/src/components/Row.css
@@ -5,3 +5,11 @@
     width: 60%;
     overflow: scroll;
   }
+
+  @media (max-width: 750px) {
+.flexRowJustified {
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+  }
