--- a/frontend/src/commons/Card.css
+++ b/frontend/src/commons/Card.css
@@ -7,7 +7,14 @@
   box-shadow: 4px 4px 8px 2px rgba(233, 233, 233, 0.4);
   height: 330px;
   margin: 20px;
+  transition: all .15s ease-in-out;
 }
+
+.card:hover {
+  transform: scale(1.1);
+}
+
+
 
 .card > a {
   display: flex;
