--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -65,6 +65,10 @@
   right: 0;
 }
 
+.userButtons > a {
+  text-decoration: none;
+}
+
 .navButton {
   font-weight: bold;
   font-family: sans-serif;
@@ -110,7 +114,7 @@
   }
 
   .mediaNavDiv {
-    margin: 20px 0px;
+    margin: 20px 20px;
     display: flex;
     flex-direction: column;
     align-self: center;
