--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,9 @@
 
 .content {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center ;
   height: auto;
   margin-top: 20px;
 }
