added punctuation and removed rows in home screen

--- a/frontend/src/commons/Item.css
+++ b/frontend/src/commons/Item.css
@@ -1,37 +1,133 @@
-.heartDiv, .heartDivItem {
-    cursor: pointer;
-    z-index: 2;
-    position: absolute;
-    justify-content: center;
-    height: 48px;
-    width: 48px;
-    border-radius: 50%;
-    border-color: transparent;
-    background-color: #ffffff;
-    margin-top: -12px;
-    margin-left: 144px;
-    box-shadow: 4px 4px 2px rgba(233, 233, 233, 0.4);
-  }
-  
-  .heartDivItem {
-    margin-left: 260px;
-  }
+.heartDiv,
+.heartDivItem {
+  cursor: pointer;
+  z-index: 2;
+  position: absolute;
+  justify-content: center;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  border-color: transparent;
+  background-color: #ffffff;
+  margin-top: -12px;
+  margin-left: 144px;
+  box-shadow: 4px 4px 2px rgba(233, 233, 233, 0.4);
+}
 
+.heartDivItem {
+  margin-left: 260px;
+}
+
+.movieContent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin: auto;
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 800px) {
   .movieContent {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 80%;
+    flex-direction: row;
+    /* width: 80%; */
     margin: auto;
-    margin-top: 30px;
+    margin-top: 60px;
   }
-  
-  @media screen and (min-width: 600px){
-    .movieContent {
-      display: flex;
-      flex-direction: row;
-      width: 80%;
-      margin: auto;
-      margin-top: 30px;
-    }
+
+  .title {
+    color: white;
   }
+
+  .header_info {
+    color: white;
+  }
+
+  .banner-div,
+  .banner-div2 {
+    display: block;
+  }
+}
+
+.genre-div {
+  margin: 5px 8px;
+  margin-bottom: 20px;
+  background-color: rgb(36, 123, 180);
+  padding: 10px 20px;
+  border-radius: 20px;
+}
+
+.genre-div > a {
+  color: white;
+  text-decoration: none;
+}
+
+.banner-div {
+  width: 100%;
+  position: absolute;
+  z-index: -3;
+  margin-top: 50px;
+}
+
+.banner-img {
+  height: 500px;
+  width: 100%;
+  object-fit: cover;
+  z-index: -3;
+}
+
+.banner-div2 {
+  background-color: rgba(0, 0, 0, 0.7);
+  height: 500px;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+  margin-top: 49px;
+}
+
+@media screen and (max-width: 800px) {
+  .banner-div,
+  .banner-div2 {
+    display: none;
+  }
+}
+
+.content-div {
+  width: 80%;
+  display: flex;
+  /* flex-direction: column; */
+  align-items: center;
+  width: 100%;
+  margin: auto;
+  margin-top: 30px;
+}
+
+/* .title {
+  color: white
+}
+
+.header_info {
+  color: white
+} */
+
+.score-div {
+  align-self: center;
+  position: relative;
+  color: white;
+  border-radius: 100%;
+}
+
+.circle-border {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  width: 110px;
+  height: 110px;
+  margin-left: 30%;
+  border-radius: 100%;
+  /* background-color: #E53B3B; */
+  /* background: linear-gradient(270deg, black 50%, transparent 50%), */
+  /* linear-gradient(0deg, black 50%, lightgray 50%); */
+}
