updated item styles

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,8 +14,9 @@
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center ;
-  height: auto;
+  /* justify-content: center; */
+  /* align-items: center ; */
+  height: 100%;
+  width: 100%;
   margin-top: 20px;
 }
