--- a/frontend/src/commons/Item.css
+++ b/frontend/src/commons/Item.css
@@ -1,61 +1,67 @@
 .heartDiv,
 .heartDivItem {
+  display: inline;
   cursor: pointer;
-  z-index: 2;
   position: absolute;
+  z-index: 2;
   justify-content: center;
-  height: 48px;
-  width: 48px;
+  height: 60px;
+  width: 60px;
   border-radius: 50%;
   border-color: transparent;
   background-color: #ffffff;
-  margin-top: -12px;
-  margin-left: 144px;
-  box-shadow: 4px 4px 2px rgba(233, 233, 233, 0.4);
+  margin-top: -75px;
+  margin-left: 100px;
 }
 
-.heartDivItem {
-  margin-left: 260px;
-}
-
-.movieContent {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.media-wrapper {
   width: 80%;
-  margin: auto;
-  margin-top: 30px;
 }
 
-@media screen and (min-width: 800px) {
-  .movieContent {
-    display: flex;
-    flex-direction: row;
-    /* width: 80%; */
-    margin: auto;
-    margin-top: 60px;
-  }
+.movie-pic {
+  display: none;
+  width: 350px;
+  height: 525px;
+  object-fit: cover;
+  border-radius: 8px;
+}
 
-  .title {
-    color: white;
-  }
 
-  .header_info {
-    color: white;
-  }
-
-  .banner-div,
-  .banner-div2 {
+@media screen and (min-width: 1200px) {
+  .movie-pic {
     display: block;
+    width: 350px;
+    height: 525px;
+    object-fit: cover;
+    border-radius: 8px;
   }
+
+}
+
+.title {
+  color: white;
+}
+
+.header_info {
+  color: white;
+}
+
+.genres {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  /* align-items: fl; */
 }
 
 .genre-div {
   margin: 5px 8px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   background-color: rgb(36, 123, 180);
   padding: 10px 20px;
   border-radius: 20px;
+  width: 70px;
+  text-align: center;
+  /* display: none; */
 }
 
 .genre-div > a {
@@ -63,35 +69,103 @@
   text-decoration: none;
 }
 
-.banner-div {
-  width: 100%;
-  position: absolute;
-  z-index: -3;
-  margin-top: 50px;
+.movieContent {
+  display: flex;
+  flex-direction: column;
+  padding: 30px 30px;
+  margin: auto;
+  height: auto;
+  background-image: url();
 }
 
-.banner-img {
-  height: 500px;
-  width: 100%;
-  object-fit: cover;
-  z-index: -3;
-}
-
-.banner-div2 {
-  background-color: rgba(0, 0, 0, 0.7);
-  height: 500px;
-  width: 100%;
-  position: absolute;
-  z-index: -1;
-  margin-top: 49px;
-}
-
-@media screen and (max-width: 800px) {
-  .banner-div,
-  .banner-div2 {
-    display: none;
+@media screen and (max-width: 700px) {
+  .movieContent {
+    align-items: center;
   }
 }
+
+.media-wrapper {
+  padding-left: 30px;
+}
+
+#itemPicture {
+  margin-top: 30px;
+}
+
+@media screen and (min-width: 500px) {
+  .genre-div {
+    display: block;
+    height: auto;
+    width: auto;
+    margin-bottom: 20px;
+  }
+}
+
+/* .banner-div2,  */
+.banner-div,
+.banner-img {
+  position: absolute;
+  width: 100%;
+  display: block;
+}
+
+.banner-div {
+  display: flex;
+  height: 700px;
+  z-index: -3;
+}
+
+/* .banner-div2 {
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+} */
+
+.banner-img {
+  filter: brightness(40%);
+  object-fit: cover;
+  height: 100%;
+}
+
+@media screen and (min-width: 500px) {
+  .banner-div {
+    height: 700px;
+  }
+  .media-wrapper {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .movieContent {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .banner-div {
+    height: 580px;
+  }
+
+  .banner-img {
+    height: 100%;
+  }
+
+ #itemPicture {
+   margin-left: 50px;
+ }
+
+ .media-wrapper {
+   margin-right: 50px;
+ }
+}
+
+/* @media screen and (max-width: 700px) {
+  .banner-div,
+  .banner-div2 {
+    height: 100%;
+    width: auto;
+  }
+} */
 
 .content-div {
   width: 80%;
@@ -102,14 +176,6 @@
   margin: auto;
   margin-top: 30px;
 }
-
-/* .title {
-  color: white
-}
-
-.header_info {
-  color: white
-} */
 
 .score-div {
   align-self: center;
@@ -127,7 +193,19 @@
   height: 110px;
   margin-left: 30%;
   border-radius: 100%;
-  /* background-color: #E53B3B; */
-  /* background: linear-gradient(270deg, black 50%, transparent 50%), */
-  /* linear-gradient(0deg, black 50%, lightgray 50%); */
+}
+
+.overview {
+  letter-spacing: 0.8px;
+  line-height: 1.5;
+}
+
+.adding-fav-loader {
+  width: 180px;
+  height: 130px;
+  padding: 10px 20px;
+  border-radius: 5px;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.4);
+  margin: 150px 40px;
 }
