--- a/frontend/src/components/Profile.js/Profile.css
+++ b/frontend/src/components/Profile.js/Profile.css
@@ -1,14 +1,24 @@
 .user-content {
   width: 100%;
-  background-color: rgb(146, 146, 146);
-  height: 800px;
-  margin-top: -60px;
+  background-color: rgb(255, 255, 255);
+  height: 100%;
+  margin-top: -80px;
 }
 
 .user-banner-div {
+  background-image: url(
+    https://images.unsplash.com/photo-1524985069026-dd778a71c7b4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80    );
+  background-size: cover;
+  background-position-y: 80%;
+  background-blend-mode: darken;
   width: 100%;
   height: 250px;
-  background-color: rgb(185, 185, 185);
+  background-color: rgba(0, 0, 0, 0.7);
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .user-banner-img {
@@ -36,7 +46,7 @@
     width: 200px;
   }
   .user-banner-div {
-    height: 300px;
+    height: 250px;
   }
   .user-header-div {
     margin-top: -200px;
@@ -53,15 +63,18 @@
 }
 
 .favoriteMedia {
-  color: white;
+  color: black;
   display: flex;
   flex-direction: column;
-  margin-top: 40px;
+  margin-top: 60px;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 .cards-div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-justify-content: center;}
+  justify-content: center;
+  margin-bottom: 30px;
+}
