--- a/frontend/src/components/Row.css
+++ b/frontend/src/components/Row.css
@@ -25,3 +25,26 @@
   flex: 1;
   margin: 0 20px;
 }
+
+/* width */
+::-webkit-scrollbar {
+  height: 10px;
+  width: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
