--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@
 } */
 
 .columna {
-  padding-top: 140px;
+  padding-top: 120px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -18,5 +18,13 @@
   /* align-items: center ; */
   height: 100%;
   width: 100%;
-  margin-top: 20px;
+  margin-top: 10px;
+}
+
+@media (max-width: 1200px) {
+  .columna {
+    padding-top: 100px;
+  }
+
+
 }
