--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -7,8 +7,14 @@
   flex-direction: row;
   justify-content: space-between;
   align-content: center;
-  height: 100px;
+  height: 80px;
 }
+
+.logo-img {
+  height: 50px;
+}
+
+
 
 .logoDiv {
   padding-left: 40px;
@@ -39,7 +45,8 @@
   color: #00b7ff;
 }
 
-.mediaNavButton {
+.mediaNavButton,
+.selectedMediaNavButton {
   font-weight: bold;
   font-family: sans-serif;
   font-size: 1.2em;
@@ -51,6 +58,10 @@
   border-style: none;
   cursor: pointer;
   border-radius: 5px;
+}
+
+.selectedMediaNavButton {
+  color: #fcc44c;
 }
 
 .mediaNavButton:hover {
@@ -106,11 +117,10 @@
   width: 100%;
 }
 
-
 @media (max-width: 1200px) {
   .userButtons {
     width: 100%;
-    margin: 20px 0px
+    margin: 20px 0px;
   }
 
   .mediaNavDiv {
@@ -136,11 +146,11 @@
   }
 
   .navButton:hover {
-    background-color:#ffae00
+    background-color: #ffae00;
   }
 
   #LoginButton:hover {
-    color:#ffae00
+    color: #ffae00;
   }
 }
 
@@ -168,16 +178,42 @@
   width: 50px;
   cursor: pointer;
   margin-right: 40px;
-  /* align-self: flex-end; */
 }
 
 .close-menu {
-  padding-top: 100vh;
   margin: 25px;
   right: 35px;
   height: 36px;
   width: 36px;
   cursor: pointer;
   margin-right: 45px;
-  /* align-self: flex-end; */
+}
+
+@media (max-width:400px) {
+  .hamburger-menu {
+    height: 40px;
+    width: 40px;
+  }
+  .close-menu {
+    height: 30px;
+    width: 30px;
+  }
+}
+
+
+@media (max-width: 1200px) {
+  .navbar {
+    height: 64px;
+  }
+
+  .logo-img {
+    height: 40px;
+  }
+
+  .mobile-navigation {
+    position: absolute;
+    right: 0;
+    margin-top: 64px;
+    z-index: -10
+  }
 }
