--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,14 +8,23 @@ body {
 }
 
 .flexColumnAligned {
+  padding: 20px;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100%;
+  align-self: center;
+  width: 300px;
 }
 
-.flexColumnAligned > label, button {
+.flexColumnAligned > label,
+button {
   margin-top: 15px;
   margin-bottom: 10px;
+}
+
+.userForm {
+  border-radius: 8px;
+  background-color: rgb(246, 246, 246);
+  box-shadow: 3px 3px 8px 2px rgba(157, 156, 156, 0.3);
 }
