--- a/frontend/src/components/Movies/Movies.css
+++ b/frontend/src/components/Movies/Movies.css
@@ -2,13 +2,19 @@
   display: flex;
   justify-content: center;
   margin: 0 20px;
-  margin-top: 10px;
-  
+  margin-top: 20px;
+  width: 100%;
+  /* min-width: 720px; */
+  align-self: center;
+  background-color: rgb(246, 246, 246);
+  box-shadow: 3px 3px 8px 2px rgba(157, 156, 156, 0.3);
+  border-radius: 8px;
+  min-height: 80px;
 }
 
-.movies-tagnav > a{
+.movies-tagnav > a {
   text-decoration: none;
-  }
+}
 
 @media (max-width: 1000px) {
   .movies-tagnav {
@@ -23,6 +29,14 @@
   }
 }
 
+@media (max-width: 900px) {
+  .movies-tagnav {
+    width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
+
 .tagnav-button {
   background-color: transparent;
   font-size: 1.2em;
@@ -30,8 +44,10 @@
   width: 160px;
   padding: 0px 20px;
   margin: 0 10px;
+  padding-top: 10px;
   border-style: none;
   cursor: pointer;
+  /* color: white */
 }
 
 .tagnav-button:hover {
