--- a/frontend/src/components/UserSearch.css
+++ b/frontend/src/components/UserSearch.css
@@ -1,5 +1,29 @@
 .tableColumn {
-    margin: 20px;
-    width: 150px;
-    text-align: center;
+  margin: 20px;
+  min-width: 110px;
+  text-align: center;
+}
+
+.userRow {
+  display: flex;
+  justify-content: center;
+  box-shadow: 3px 3px 8px 2px rgba(205, 205, 205, 0.4);
+  margin-bottom: 20px;
+  width: 570px;
+  border-radius: 8px;
+}
+
+@media (max-width: 600px) {
+  .tableColumn {
+    min-width: auto;
+    display: flex;
+    flex-direction: column;
+    margin: 20px 10px;
+    width: 80px;
+  }
+
+  .userRow {
+    /* padding: 0 10px; */
+    width: 80%;
+  }
 }
