--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
   z-index: 10;
   position: fixed;
   width: 100%;
-  background-color: #1e1eac;
+  background-color: #02175a;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
