--- a/frontend/src/components/SearchForm/SearchForm.css
+++ b/frontend/src/components/SearchForm/SearchForm.css
@@ -30,7 +30,7 @@
   font-size: 0.9em;
   height: 48px;
   padding: 0 20px;
-  background-color: #1e1eac;
+  background-color: #02175a;
   color: white;
   font-weight: bold;
   border-radius: 22.5px;
@@ -44,7 +44,7 @@
   font-size: 0.9em;
   height: 48px;
   padding: 0 20px;
-  background-color: #1e1eac;
+  background-color: #02175a;
   color: white;
   font-weight: bold;
   border-radius: 22.5px;
@@ -52,8 +52,8 @@
   cursor: pointer;
 }
 
-.searchSubmitButton:hover {
-  background-color: #1e1eac;
+.searchSubmitButton:hover, .searchLens:hover {
+  background-color: #0a0a96;
 }
 
 @media (max-width: 990px) {
