--- a/frontend/src/Invitation.css
+++ b/frontend/src/Invitation.css
@@ -7,6 +7,7 @@
     border-radius: 8px;
     background-color: #1e1eac;
     color: white;
+    letter-spacing: 0.5px;
     font-weight: 400;
     font-size: 1.1em;
     box-shadow: 3px 3px 8px 2px rgba(205, 205, 205, 0.4);
