--- a/frontend/src/commons/Item.css
+++ b/frontend/src/commons/Item.css
@@ -1,10 +1,11 @@
 .heartDiv,
 .heartDivItem {
-  display: inline;
+  display: flex;
   cursor: pointer;
   position: absolute;
   z-index: 2;
   justify-content: center;
+  align-items: center;
   height: 60px;
   width: 60px;
   border-radius: 50%;
@@ -12,6 +13,15 @@
   background-color: #ffffff;
   margin-top: -75px;
   margin-left: 100px;
+}
+
+.heartDivItem > svg {
+  height: 60%;
+  width: 60%;
+}
+
+.filledHeart > svg {
+  color: red
 }
 
 .media-wrapper {
@@ -26,6 +36,9 @@
   border-radius: 8px;
 }
 
+.addfav-title {
+  display: block;
+}
 
 @media screen and (min-width: 1200px) {
   .movie-pic {
@@ -35,7 +48,6 @@
     object-fit: cover;
     border-radius: 8px;
   }
-
 }
 
 .title {
@@ -151,13 +163,13 @@
     height: 100%;
   }
 
- #itemPicture {
-   margin-left: 50px;
- }
+  #itemPicture {
+    margin-left: 50px;
+  }
 
- .media-wrapper {
-   margin-right: 50px;
- }
+  .media-wrapper {
+    margin-right: 50px;
+  }
 }
 
 /* @media screen and (max-width: 700px) {
@@ -203,11 +215,46 @@
 }
 
 .adding-fav-loader {
-  width: 180px;
+  /* width: 180px;
   height: 130px;
   padding: 10px 20px;
   border-radius: 5px;
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.4);
-  margin: 150px 40px;
+  background-color: rgba(0, 0, 0, 0.5); */
+  /* color: white; */
+  /* margin: 150px 65px; */
+}
+
+@media (max-width: 1200px) {
+  .addfav-title {
+    display: none;
+  }
+  .adding-fav-loader {
+    /* width: 80px;
+    height: 80px;
+    padding: 0px 10px;
+    padding-bottom: 10px;
+    position: absolute;
+    background-color: transparent;
+    color: rgb(19, 19, 19);
+    margin: 148px 110px;
+    z-index: 10; */
+  }
+}
+
+@media (max-width: 700px) {
+  .addfav-title {
+    display: none;
+  }
+  .adding-fav-loader {
+    width: 80px;
+    height: 80px;
+    padding: 0px 10px;
+    padding-bottom: 10px;
+    position: absolute;
+    background-color: transparent;
+    color: rgb(19, 19, 19);
+    margin: 148px 110px;
+    z-index: 10;
+  }
 }
