--- a/frontend/src/components/Movies/Movies.css
+++ b/frontend/src/components/Movies/Movies.css
@@ -48,6 +48,8 @@
   border-style: none;
   cursor: pointer;
   /* color: white */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Helvetica Neue", sans-serif;
 }
 
 .tagnav-button:hover {
