--- a/frontend/src/Invitation.css
+++ b/frontend/src/Invitation.css
@@ -5,12 +5,16 @@
     text-align: center;
     margin-top: 50px;
     border-radius: 8px;
-    background-color: #1e1eac;
+    background-color: #02175a;
     color: white;
     letter-spacing: 0.5px;
     font-weight: 400;
     font-size: 1.1em;
     box-shadow: 3px 3px 8px 2px rgba(205, 205, 205, 0.4);
+}
+
+.invitation-div:hover{
+    background-color: #0a0a96;
 }
 
 .userRegisteredInv {
