--- a/frontend/src/commons/Item.css
+++ b/frontend/src/commons/Item.css
@@ -11,8 +11,8 @@
   border-radius: 50%;
   border-color: transparent;
   background-color: #ffffff;
-  margin-top: -75px;
-  margin-left: 100px;
+  margin-top: -73px;
+  margin-left: 90px;
 }
 
 .heartDivItem > svg {
@@ -29,15 +29,25 @@
 } */
 
 .movie-pic {
-  display: none;
-  width: 350px;
-  height: 525px;
+  /* display: none; */
+  width: 200px;
+  height: 300px;
   object-fit: cover;
   border-radius: 8px;
 }
 
 .addfav-title {
   display: block;
+}
+
+@media screen and (min-width: 600px) {
+  .movie-pic {
+    display: block;
+    width: 300px;
+    height: 450px;
+    object-fit: cover;
+    border-radius: 8px;
+  }
 }
 
 @media screen and (min-width: 1000px) {
@@ -62,11 +72,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  /* align-items: fl; */
 }
 
 .genre-div {
-  margin: 5px 8px;
+  margin: 5px 16px 5px 0;
   margin-bottom: 10px;
   background-color: rgb(36, 123, 180);
   padding: 10px 20px;
@@ -81,6 +90,10 @@
   text-decoration: none;
 }
 
+.runtime {
+  padding: 10px 10px 10px 0;
+}
+
 .movieContent {
   display: flex;
   flex-direction: column;
@@ -90,20 +103,29 @@
   margin: auto;
   width: 100%;
   margin-top: 30px;
+  margin-bottom: 30px;
+  /* padding */
   height: auto;
   background-size: cover;
 }
 
 #itemPicture {
-  padding: 30px 0;
+  padding: 30px 20px;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
+  .runtime {
+    margin: 20px 0px;
+  }
   .movieContent {
     align-items: center;
   }
   #itemPicture {
     padding: 0;
+    padding-top: 20px;
+  }
+  .genres {
+    align-items: center;
   }
 }
 
@@ -111,12 +133,15 @@
   padding: 30px 30px;
 }
 
+.movieContent {
+  padding: 30px 0;
+}
+
 @media screen and (min-width: 500px) {
   .genre-div {
     display: block;
     height: auto;
     width: auto;
-    margin-bottom: 20px;
   }
 }
 
@@ -156,7 +181,7 @@
   }
 }
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 800px) {
   .movieContent {
     display: flex;
     flex-direction: row;
@@ -209,6 +234,10 @@
   border-radius: 100%;
 }
 
+.heartDivItem:hover {
+  background-color: rgb(228, 228, 228);
+}
+
 .circle-border {
   position: relative;
   display: flex;
@@ -226,35 +255,13 @@
   /* min-width: 40vw; */
 }
 
-.adding-fav-loader {
-  /* width: 180px;
-  height: 130px;
-  padding: 10px 20px;
-  border-radius: 5px;
-  position: absolute;
-  background-color: rgba(0, 0, 0, 0.5); */
-  /* color: white; */
-  /* margin: 150px 65px; */
-}
-
 @media (max-width: 1200px) {
   .addfav-title {
     display: none;
   }
-  .adding-fav-loader {
-    /* width: 80px;
-    height: 80px;
-    padding: 0px 10px;
-    padding-bottom: 10px;
-    position: absolute;
-    background-color: transparent;
-    color: rgb(19, 19, 19);
-    margin: 148px 110px;
-    z-index: 10; */
-  }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .addfav-title {
     display: none;
   }
