--- a/frontend/src/components/UserSearch.css
+++ b/frontend/src/components/UserSearch.css
@@ -36,7 +36,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
-  width: 570px;
+  width: 700px;
   border-radius: 8px;
 }
 
@@ -47,9 +47,12 @@
 .userRow {
   box-shadow: 3px 3px 8px 2px rgba(205, 205, 205, 0.4);
   transition: all 0.15s ease-in-out;
+  -webkit-transition: all 0.15s ease-in-out;
+  transform: scale(1);
 }
 
-.userRow:hover {
+.userRow:hover {  
+  -webkit-transform:scale(1.05);
   scale: 1.05;
 }
 
