--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,3 +29,18 @@ button {
   background-color: rgb(246, 246, 246);
   box-shadow: 3px 3px 8px 2px rgba(157, 156, 156, 0.3);
 }
+
+/* @media (max-width: 400px) {
+  .userForm{
+    flex: 1;
+  }
+} */
+
+.inputLabel {
+  font-size: 1.1em;
+  font-weight: 500;
+}
+
+.inputText {
+  font-size: 1em;
+}
