--- a/frontend/src/commons/FavoritesCard/FavoritesCard.css
+++ b/frontend/src/commons/FavoritesCard/FavoritesCard.css
@@ -2,7 +2,12 @@
   justify-content: space-between;
   border-radius: 4px;
   width: auto;
-  margin: 10px 20px
+  margin: 20px 20px;
+  transition: all .15s ease-in-out;
+}
+
+.favoritesCard:hover {
+  transform: scale(1.1);
 }
 
 .trashDiv {
@@ -30,4 +35,10 @@
 
 figure {
     margin: 0;
+}
+
+.trashSpinner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
