--- a/frontend/src/components/Spinner.css
+++ b/frontend/src/components/Spinner.css
@@ -7,8 +7,8 @@
 }
 
 .spinner > svg {
-  width: 50px;
-  height: 50px;
+  /* width: 50px;
+  height: 50px; */
   animation: spin 1.5s linear infinite;
 }
 
