--- a/frontend/src/components/SearchForm/SearchForm.css
+++ b/frontend/src/components/SearchForm/SearchForm.css
@@ -25,6 +25,12 @@
   outline: none;
 }
 
+@media (max-width: 420px) {
+  .searchInput {
+    padding-left: 15px;
+  }
+}
+
 .searchSubmitButton {
   margin: 0px;
   font-size: 0.9em;
@@ -52,7 +58,8 @@
   cursor: pointer;
 }
 
-.searchSubmitButton:hover, .searchLens:hover {
+.searchSubmitButton:hover,
+.searchLens:hover {
   background-color: #0a0a96;
 }
 
@@ -61,14 +68,12 @@
     display: none;
   }
   .searchForm {
-  width: 70%;
+    width: 70%;
   }
-
 }
 
 @media (min-width: 990px) {
   .searchLens {
     display: none;
   }
-
 }
