--- a/frontend/src/commons/Card/Card.css
+++ b/frontend/src/commons/Card/Card.css
@@ -7,14 +7,12 @@
   box-shadow: 4px 4px 8px 2px rgba(220, 220, 220, 0.6);
   height: 330px;
   margin: 20px;
-  transition: all .15s ease-in-out;
+  transition: all 0.15s ease-in-out;
 }
 
 .card:hover {
   transform: scale(1.1);
 }
-
-
 
 .card > a {
   display: flex;
@@ -33,19 +31,6 @@
   border-radius: 4px 4px 0 0;
 }
 
-@media (max-width: 850px) {
-  .card, .card-img {
-  width: 120px;
-  }
-  .card {
-    height: 250px;
-  }
-  .card-img {
-    height: 180px;
-  }
-}
-
-
 .card-content {
   display: flex;
   flex: 1;
@@ -53,11 +38,31 @@
   align-items: center;
   text-align: center;
   background-color: white;
+  border-radius: 0 0 4px 4px;
+  font-size: 0.95em;
+  padding: 0 5px;
+  font-weight: 500;
 }
 
 .card-content > * {
-  margin : 0;
+  margin: 0;
 }
 .image {
   margin: 0;
+}
+
+@media (max-width: 850px) {
+  .card,
+  .card-img {
+    width: 130px;
+  }
+  .card {
+    height: 250px;
+  }
+  .card-img {
+    height: 210px;
+  }
+  .card-content {
+    font-size: 0.9em;
+  }
 }
