--- a/frontend/src/commons/FavoritesCard/FavoritesCard.css
+++ b/frontend/src/commons/FavoritesCard/FavoritesCard.css
@@ -1,13 +1,27 @@
 .favoritesCard {
-  justify-content: space-between;
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
   border-radius: 4px;
-  width: auto;
-  margin: 20px 20px;
-  transition: all .15s ease-in-out;
+  box-shadow: 4px 4px 8px 2px rgba(220, 220, 220, 0.6);
+  height: 280px;
+  margin: 20px 20px 10px 20px;
+  transition: all 0.15s ease-in-out;
 }
 
 .favoritesCard:hover {
   transform: scale(1.1);
+}
+
+.favoritesCard > a {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  align-content: center;
+  height: 100%;
+  text-decoration: none;
+  color: black;
 }
 
 .trashDiv {
@@ -20,8 +34,8 @@
   border-radius: 50%;
   border-color: transparent;
   background-color: #ffffff;
-  box-shadow: 4px 4px 2px rgba(233, 233, 233, 0.4);
-  margin: -15px
+  box-shadow: 2px 2px 2px rgba(233, 233, 233, 0.4);
+  margin: -15px;
 }
 
 .image {
@@ -29,16 +43,50 @@
   object-fit: cover;
   border-radius: 4px 4px 0 0;
   width: 150px;
+  /* height: 270px; */
   background-color: white;
   height: auto;
 }
 
 figure {
-    margin: 0;
+  margin: 0;
+}
+
+.favcard-content {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: white;
+  border-radius: 0 0 4px 4px;
+  font-size: 0.9em;
+  padding: 0 5px;
+  font-weight:500;
 }
 
 .trashSpinner {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.favcard-content > * {
+  margin : 0;
+}
+
+
+@media (max-width: 850px) {
+  .favoritesCard, .image {
+  width: 120px;
+  }
+  .favoritesCard {
+    height: 250px;
+  }
+  .card-img {
+    height: 180px;
+  }
+  .favcard-content {
+  font-size: 0.8em;
+  }
 }
