--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -19,8 +19,6 @@
   height: 50px;
 }
 
-
-
 .logoDiv {
   padding-left: 40px;
   display: flex;
@@ -101,6 +99,15 @@
 #LoginButton {
   background-color: inherit;
   color: white;
+}
+
+#user-icon {
+  margin: 0 10px 0 0;
+  color: white
+}
+
+#user-icon:hover {
+color: rgb(207, 207, 207)
 }
 
 @keyframes expand {
@@ -194,7 +201,7 @@
   margin-right: 45px;
 }
 
-@media (max-width:400px) {
+@media (max-width: 400px) {
   .hamburger-menu {
     height: 40px;
     width: 40px;
@@ -204,7 +211,6 @@
     width: 30px;
   }
 }
-
 
 @media (max-width: 1250px) {
   .navbar {
@@ -219,6 +225,6 @@
     position: absolute;
     right: 0;
     margin-top: 64px;
-    z-index: -10
+    z-index: -10;
   }
 }
