--- a/frontend/src/commons/Item/Item.css
+++ b/frontend/src/commons/Item/Item.css
@@ -80,7 +80,7 @@
   background-color: rgb(36, 123, 180);
   padding: 10px 20px;
   border-radius: 20px;
-  width: 70px;
+  /* width: 70px; */
   text-align: center;
   /* display: none; */
 }
@@ -113,7 +113,7 @@
   padding: 30px 20px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   .runtime {
     margin: 20px 0px;
   }
@@ -181,7 +181,7 @@
   }
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 1000px) {
   .movieContent {
     display: flex;
     flex-direction: row;
@@ -261,7 +261,7 @@
   }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   .addfav-title {
     display: none;
   }
