created Footer, updated styles

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,13 @@ body {
   /* background-color: rgb(0, 0, 0, 0.9); */
 }
 
+#root {
+  height: 100%;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+}
+
 .flexColumnAligned {
   padding: 20px;
   height: auto;
